# glosi

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  make.sh  run.sh
assets/: how-to-export-from-blender--materials.txt
assets/blender/: bounding_sphere.blend  cube.blend  grid.blend  skydome.blend  sphere.blend  tetra.blend
assets/blender/asteroids/: asteroid_large.blend  asteroid_medium.blend  asteroid_small.blend  fragment.blend  landing_pad.blend  power_up.blend  ship.blend  ship_bullet.blend  ship_engine_on.blend  ufo.blend  ufo_bullet.blend
assets/maps/: level_1.map  level_1.txt
notes/: 2025-11-16--checked-thread-sanitizer-reports.txt  2025-11-17--progress-with-tsan.txt  clipboard.txt  links.txt  todo.txt  when-compiler-optimizes-stores-before-new-in-place.txt
notes/qa/: thread-sanitizer--case-1.txt
qa/: perf-stat.txt  valgrind-cache.txt
qa/lint/: clang-tidy.cfg  clang-tidy.sh  cppcheck.sh
qa/perf/: record.sh  run.sh  stat.sh
qa/plot/: fps.plot  metrics.txt  run.sh  update.plot
qa/sanitizer/: tsan_suppressions.txt
qa/valgrind/: cache.sh  leaks.sh
src/: README.md  main.cpp
src/application/: README.md  application.hpp  configuration.hpp  state.hpp  utils.hpp
src/application/objects/: asteroid_large.hpp  asteroid_medium.hpp  asteroid_small.hpp  boulder.hpp  cube.hpp  fragment.hpp  power_up.hpp  ship.hpp  ship_bullet.hpp  sphere.hpp  static_object.hpp  tetra.hpp  ufo.hpp  ufo_bullet.hpp
src/engine/: README.md  camera.hpp  cell.hpp  decouple.hpp  engine.hpp  exception.hpp  globs.hpp  grid.hpp  hud.hpp  materials.hpp  metrics.hpp  net.hpp  net_server.hpp  o1store.hpp  objects.hpp  planes.hpp  sdl.hpp  shaders.hpp  textures.hpp  window.hpp
